# contactWrenchSet

./: CMakeLists.txt  fwp_install_deps.sh  package.xml
config/: cws_options.ini  hyq.urdf  hyq.yarf  ipopt_configLP.yaml  ipopt_configNL.yaml
include/contact_wrench_set/: FeasibleWrenchPolytope_API.h  OptimizationProb.h  VertexBasedTO.h  chebyshev_center.h  get_weights_lp.h  mink_glpk.h  testOptim.h
include/contact_wrench_set/LP/: glpk_wrapper.h
src/: FeasibleWrenchPolytope_API.cpp  OptimizationProb.cpp  VertexBasedTO.cpp  chebyshev_center.cpp  get_weights_lp.cpp  mink_glpk.cpp  testOptim.cpp
src/LP/: glpk_wrapper.cpp  test_glpk_wrapper.cpp
src/computationalGeometry/: generator.cpp
tests/: test_ipopt.cpp
tests/allfaces_test3D/: CMakeLists.txt
tests/cddlib_test3D/: CMakeLists.txt  minkowski.c
tests/cddlib_test6D/: CMakeLists.txt  minkowski.c
tests/full_newton_step/: exercise1.c  exercise2.c  exercise3.c  full_newton_step.c
tests/glpk_simple_test/: glpk_simple_test.cpp  glpk_simple_test2.cpp
tests/ipopt_test/: CMakeLists.txt  MyNLP.cpp  cpp_example.cpp  mink_glpk.cpp  mink_glpk.h
tests/minksum_test/: CMakeLists.txt  minkSum.cc
tests/minksum_with_vertices/: my_mink_glpk_algo2.cpp
tests/provaIpopt/: CMakeLists.txt  testOptim.cpp
tests/provaIpopt/include/: OptimizationProblem.h
tests/provaIpopt/src/: OptimizationProblem.cpp
tests/threads_test/: CMakeLists.txt  cws_thread.c  hello_world.c
