<?xml version="1.0"?>
<package>
  <name>contactWrenchSet</name>
  <version>0.0.1</version>
  <description>Contact Wrench Set Algorithm </description>

  <maintainer email="hyq@advr.iit.it">HyQ Group</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/hyq2max_controllers</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dwl</build_depend>
  <build_depend>dwl_rviz_plugin</build_depend>	
  <build_depend>pluginlib</build_depend>
  <build_depend>math_utils</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>dwl</run_depend>
  <run_depend>dwl_rviz_plugin</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>math_utils</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
